rviz: prepare for Ogre1.10

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,6 @@ endif()
 find_package(Eigen REQUIRED)
 find_package(Boost REQUIRED system filesystem)
 
-# Ogre
-pkg_check_modules(OGRE OGRE)
-link_directories(${OGRE_LIBRARY_DIRS})
-
 # Qt Stuff
 find_package(Qt4 REQUIRED)
 include(${QT_USE_FILE})
@@ -42,8 +38,7 @@ include_directories(${catkin_INCLUDE_DIRS})
 include_directories(SYSTEM
                     ${Boost_INCLUDE_DIRS}
                     ${QT_INCLUDE_DIR}
-                    ${OGRE_INCLUDE_DIRS}
-		    ${OPENGL_INCLUDE_DIR})
+                    ${OPENGL_INCLUDE_DIR})
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 link_directories(${Boost_LIBRARY_DIRS})
@@ -54,7 +49,7 @@ link_directories(${catkin_LIBRARY_DIRS})
 add_library(${PROJECT_NAME}
   src/rviz_animated_view_controller.cpp
   ${MOC_FILES})
-target_link_libraries(${PROJECT_NAME} ${QT_LIBRARIES} ${OGRE_LIBRARIES} ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} ${QT_LIBRARIES} ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 
 install(FILES
   plugin_description.xml
